<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.samples</groupId>
	<artifactId>akka-sample-trading</artifactId>
	<version>1.0-RC6</version>
	<name>Scala Akka Trading Sample</name>
	<packaging>jar</packaging>
	<properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<scala.version>2.8.1</scala.version>
		<akka.version>1.0-RC6</akka.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
					<args>
						<arg>-target:jvm-1.5</arg>
					</args>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<forkMode>always</forkMode>
					<!-- scala actors thread pool can be configured with
						-Dactors.corePoolSize=4 -Dactors.maxPoolSize=16
					 -->
					<argLine>-server -Xms512m -Xmx1024m -XX:+UseConcMarkSweepGC -DuseTxLogFile=false -Dbenchmark=false -DminClients=1 -DmaxClients=40 -DuseDummyOrderbook=true -DrepeatFactor=10 -DwarmupRepeatFactor=10</argLine>
					<!-- 
					<includes>
						<include>**/AkkaPerformanceTest.*</include>
						<include>**/AkkaBangPerformanceTest.*</include>
					</includes>
					 -->
					<excludes>
			            <exclude>**/AllBenchmarkTests.java</exclude>
					</excludes>
				</configuration>
				
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<!--
						buildOutputDirectory doesn't work due to
						http://jira.codehaus.org/browse/MECLIPSE-422 An workaround is the
						outputDirectory at project/build level
						<buildOutputDirectory>war/WEB-INF/classes</buildOutputDirectory>
					-->
					<testOutputDirectory>target/test-classes</testOutputDirectory>
					<classpathContainers>
						<classpathContainer>ch.epfl.lamp.sdt.launching.SCALA_CONTAINER</classpathContainer>
					</classpathContainers>
					<buildcommands>
						<buildcommand>ch.epfl.lamp.sdt.core.scalabuilder</buildcommand>
					</buildcommands>
					<additionalProjectnatures>
						<buildcommand>ch.epfl.lamp.sdt.core.scalabuilder</buildcommand>
						<projectnature>org.eclipse.jdt.core.javanature</projectnature>
					</additionalProjectnatures>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
		        <!-- 
		        <configuration>
		        	<archive>
			            <manifest>
			              <mainClass>org.junit.runner.JUnitCore</mainClass>
			              <addClasspath>true</addClasspath>
			            </manifest>
			          </archive>
		        </configuration>
		         -->
		        <executions> 
                    <execution> 
                        <goals> 
                            <goal>test-jar</goal> 
                        </goals> 
                    </execution> 
                </executions>
			</plugin>
			<plugin>
		        <artifactId>maven-assembly-plugin</artifactId>
		        <version>2.2-beta-5</version>
		        <configuration>
		          <descriptors>
		            <descriptor>src/main/assembly/dist.xml</descriptor>
		          </descriptors>
		        </configuration>
			</plugin>
		</plugins>

	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<!-- <scope>test</scope>  -->
		</dependency>
		<dependency>
			<groupId>org.scala-tools.testing</groupId>
			<artifactId>specs</artifactId>
			<version>1.6.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<artifactId>akka-actor</artifactId>
		    <groupId>se.scalablesolutions.akka</groupId>
		    <version>${akka.version}</version>
    	</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>scala-tools.org</id>
			<name>Scala-Tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</repository>
		<repository>
		  <id>Akka</id>
		  <name>Akka Maven2 Repository</name>
		  <url>http://akka.io/repository/</url>
		</repository>
		 
		<repository>
		  <id>Multiverse</id>
		  <name>Multiverse Maven2 Repository</name>
		  <url>http://multiverse.googlecode.com/svn/maven-repository/releases/</url>
		</repository>
		 
		<repository>
		  <id>GuiceyFruit</id>
		  <name>GuiceyFruit Maven2 Repository</name>
		  <url>http://guiceyfruit.googlecode.com/svn/repo/releases/ </url>
		</repository>
		 
		<repository>
		  <id>JBoss</id>
		  <name>JBoss Maven2 Repository</name>
		  <url>https://repository.jboss.org/nexus/content/groups/public/ </url>
		</repository>
		
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>scala-tools.org</id>
			<name>Scala-Tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</pluginRepository>
	</pluginRepositories>
</project>	
